cmake_minimum_required(VERSION 3.5.1)

project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(day1 src/day1.cpp)
add_executable(day2 src/day2.cpp)
add_executable(day3 src/day3.cpp)
add_executable(day4 src/day4.cpp)
add_executable(day5 src/day5.cpp)
add_executable(day6 src/day6.cpp)
add_executable(day7 src/day7.cpp)