cmake_minimum_required(VERSION 3.5.1)

project(advent_of_code)

set(CMAKE_CXX_STANDARD 17)

add_executable(day01 src/day1.cpp)
add_executable(day02 src/day2.cpp)
add_executable(day03 src/day3.cpp)
add_executable(day04 src/day4.cpp)
add_executable(day05 src/day5.cpp)
add_executable(day06 src/day6.cpp)
add_executable(day07 src/day7.cpp)
add_executable(day08 src/day8.cpp)
add_executable(day09 src/day9.cpp)
add_executable(day10 src/day10.cpp)
add_executable(day11 src/day11.cpp)